[package]
name = "wgpu"
version = "0.2.2"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "Rusty wgpu API wrapper"
homepage = "https://github.com/gfx-rs/wgpu-rs"
repository = "https://github.com/gfx-rs/wgpu-rs"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]

[features]
default = []
metal = ["wgn/gfx-backend-metal"]
dx11 = ["wgn/gfx-backend-dx11"]
dx12 = ["wgn/gfx-backend-dx12"]
vulkan = ["wgn/gfx-backend-vulkan"]
gl = ["wgn/gfx-backend-gl"]

[dependencies]
arrayvec = "0.4"
#TODO: only depend on the published version
#wgn = { package = "wgpu-native", features = ["local", "window-winit"], git = "https://github.com/gfx-rs/wgpu", rev = "5b6549febccdc93f344a2b776b9a548b17afcf2f" }
wgn = { package = "wgpu-native", features = ["local", "window-winit"], git = "https://github.com/kyren/wgpu", branch = "godzilla" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.44"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[dev-dependencies]
cgmath = "0.17"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"
